# pucsou-pywt

./: LICENSE  README.md  README.rst  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
doc/: conf.py  examples.rst  index.rst  modules.rst  pycsou_pywt.operator.rst  pycsou_pywt.rst  pycsou_pywt_tests.rst  references.rst
examples/: wavedec2_bw.py  wavedec2_color.py
src/pycsou_pywt/: __init__.py
src/pycsou_pywt/operator/: __init__.py  stack.py  wavelet2d.py
src/pycsou_pywt_tests/: test_math.py
src/pycsou_pywt_tests/test_operator/: test_func.py  test_linop.py  test_wavelet2d.py
src/pycsou_pywt_tests/test_opt/: test_solver.py  test_stop.py
